--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1545,15 +1545,20 @@
           <li><kbd>Page Up</kbd>: Moves focus up an author-determined number of rows, typically scrolling so the top row in the currently visible set of rows becomes one of the last visible rows. If focus is in the first row of the grid, focus does not move. </li>
           <li><kbd>Home</kbd>: moves focus to the first cell in the row that contains focus. </li>
           <li><kbd>End</kbd>: moves focus to the last cell in the row that contains focus. </li>
-          <li><kbd>Control+Home</kbd>: moves focus to the first cell in the first row. </li>
-          <li><kbd>Control+End</kbd>: moves focus to the last cell in the last row. </li>
+          <li><kbd>Control + Home</kbd>: moves focus to the first cell in the first row. </li>
+          <li><kbd>Control + End</kbd>: moves focus to the last cell in the last row. </li>
           </ul>
           <ul class="note">
         <li>When the above grid navigation keys move focus, whether the focus is sett on an element inside the cell or the grid cell depends on cell content. See <a href="gridNav_focus">Whether to Focus on a Cell or an Element Inside It</a>.</li>
         <li>
         While navigation keys, such as arrow keys, are moving focus from cell to cell, they are not available to do something like operate a combobox or move an editing caret inside of a cell. 
-        If this functionality is needed, see <a href="#gridNav_inside"></a>.
+        If this functionality is needed, see <a href="#gridNav_inside">Editing and Navigating Inside a Cell</a>.
         </li>
+        <li>If navigation functions can dynamically add more rows or columns to
+                            the DOM, key events that move focus to the beginning or end of the grid,
+                            such as <kbd>control + End</kbd>, may move focus to the last row in the
+                            DOM rather than the last available row in the back-end data.
+                        </li>
         </ul>
           <p>If a grid supports selection of cells, rows, or columns, the following keys are commonly used for these functions. </p>
           <ul>
@@ -1580,7 +1585,80 @@
                 Because arrow keys are used to move focus inside of a <code>grid</code>, a <code>grid</code> is both easier to build and use if the components it contains do not require the arrow keys to operate.
                 If a cell contains an element like a <a href="#Listbox">listbox</a>, then an extra key command to focus and activate the listbox is needed as well as a command for restoring the grid navigation functionality.
                 </p>
+                <section class="notoc">
+                    <h5>Keyboard Interaction For Layout Grids</h5>
+                    <p>The following keys provide grid navigation by moving focus among cells of
+                        the grid. These key commands are available by default after an element in
+                        the grid receives focus.</p>
+                    <ul>
+                        <li><kbd>Right Arrow</kbd>: Moves focus one cell to the right. Optionally, if focus
+                            is on the right-most cell in the row, focus may move to the first cell in the following row. If focus is on the last cell in the grid, focus does not move.</li>
+                            <li><kbd>Left Arrow</kbd>: Moves focus one cell to the left. Optionally, if focus
+                            is on the left-most cell in the row, focus may move to the last cell in the previous row. If focus is on the first cell in the grid, focus does not move.</li>
+                            <li><kbd>Down Arrow</kbd>: Moves focus one cell down. Optionally, if focus
+                            is on the bottom cell in the row, focus may move to the top cell in the following column. If focus is on the last cell in the grid, focus does not move.</li>
+                            <li><kbd>Up Arrow</kbd>: Moves focus one cell up. Optionally, if focus
+                            is on the top cell in the row, focus may move to the bottom cell in the previous column. If focus is on the first cell in the grid, focus does not move.</li>
+                        <li><kbd>Page Down</kbd> (Optional): Moves focus down an author-determined number
+                            of rows, typically scrolling so the bottom row in the currently visible
+                            set of rows becomes one of the first visible rows. If focus is in the
+                            last row of the grid, focus does not move.</li>
+                        <li><kbd>Page Up</kbd> (Optional): Moves focus up an author-determined number of
+                            rows, typically scrolling so the top row in the currently visible set of
+                            rows becomes one of the last visible rows. If focus is in the first row
+                            of the grid, focus does not move.</li>
+                        <li><kbd>Home</kbd>: moves focus to the first cell in the row that
+                            contains focus.
+                            Optionally, if the grid has a single column or fewer than three cells per row, focus may instead move to the first cell in the grid.</li>
+                        <li><kbd>End</kbd>: moves focus to the last cell in the row that
+                            contains focus.
+                            Optionally, if the grid has a single column or fewer than three cells per row, focus may instead move to the last cell in the grid.</li>
+                        <li><kbd>Control + Home</kbd> (optional): moves focus to the first cell in the first
+                            row.</li>
+                        <li><kbd>Control + End</kbd> (Optional): moves focus to the last cell in the last
+                            row.</li>
+                    </ul>
+                    <ul class="note">
+                        <li>When the above grid navigation keys move focus, whether the focus
+                            is sett on an element inside the cell or the grid cell depends on cell
+                            content. See <a href="gridNav_focus">Whether to Focus on a Cell or
+                                an Element Inside It</a>.
+                        </li>
+                        <li>While navigation keys, such as arrow keys, are moving focus from
+                            cell to cell, they are not available to do something like operate a
+                            combobox or move an editing caret inside of a cell. If this
+                            functionality is needed, see <a href="#gridNav_inside">Editing and
+                                Navigating Inside a Cell</a>.
+                        </li>
+                        <li>If navigation functions can dynamically add more rows or columns to
+                            the DOM, key events that move focus to the beginning or end of the grid,
+                            such as <kbd>control + End</kbd>, may move focus to the last row in the
+                            DOM rather than the last available row in the back-end data.
+                        </li>
+                    </ul>
+                    <p>It would be unusual for a layout grid to provide functions that require cell selection. If it did, though, the following
+                        keys are commonly used for these functions.</p>
+                    <ul>
+                        <li><kbd>Control + Space</kbd>: selects the column that contains the
+                            focus.</li>
+                        <li><kbd>Shift + Space</kbd>: Selects the row that contains the focus.
+                            If the grid includes a column with checkboxes for selecting rows, this
+                            key can serve as a shortcut for checking the box when focus is not on
+                            the checkbox.</li>
+                        <li><kbd>Control + A</kbd>: Selects all cells.</li>
+                        <li><kbd>Shift + Rightt Arrow</kbd>: Extends selection one cell to the
+                            right.</li>
+                        <li><kbd>Shift + Left Arrow</kbd>: Extends selection one cell to the
+                            left.</li>
+                        <li><kbd>Shift + Down Arrow</kbd>: Extends selection one cell down.</li>
+                        <li><kbd>Shift + Up Arrow</kbd>: Extends selection one cell Up.</li>
+                    </ul>
+                    <p class="note">
+                        See <a href="#aria_ex_widget">Global Recommendations</a> for cut, copy and
+                        paste key assignments.
+                    </p>
                 </section>
+            </section>
                 <section id="gridNav" class="notoc">
                 <h4>Keyboard Interaction - Setting Focus and Navigating Inside Cells</h4>
                 <p> This section describes two important aspects of keyboard interaction design shared by both data and layout grid patterns:</p>
