Add w3cid to editors, required by Echidna

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -49,38 +49,45 @@
 				name : "Matt King",
 				mailto : "mck@fb.com",
 				company : "Facebook",
-				companyURI : "http://www.facebook.com/"
+				companyURI : "http://www.facebook.com/",
+				w3cid: 44582
 			}, {
 				name : "James Nurthen",
 				mailto : "james.nurthen@oracle.com",
 				company : "Oracle Corporation",
-				companyURI : "http://www.oracle.com/"
+				companyURI : "http://www.oracle.com/",
+				w3cid: 37155
 			}, {
 				name : "Michael Cooper",
 				url : 'http://www.w3.org/People/cooper/',
 				mailto : "cooper@w3.org",
 				company : "W3C",
-				companyURI : "http://www.w3.org/"
+				companyURI : "http://www.w3.org/",
+				w3cid: 34017
 			}, {
 				name : "Michiel Bijl",
 				mailto : "mbijl@paciellogroup.com",
 				company : "The Paciello Group",
-				companyURI : "https://www.paciellogroup.com/"
+				companyURI : "https://www.paciellogroup.com/",
+				w3cid: 74040
 			}, {
 				name : "Joseph Scheuhammer",
 				company : "Inclusive Design Research Centre, OCAD University",
 				companyURI : "http://idrc.ocad.ca/",
-				note : "Previous Editor"
+				note : "Previous Editor",
+				w3cid: 42279
 			}, {
 				name : "Lisa Pappas",
 				company : "SAS",
 				companyURI : "http://www.sas.com/",
-				note : "Previous Editor"
+				note : "Previous Editor",
+				w3cid: 41725
 			}, {
 				name : "Rich Schwerdtfeger",
 				company : "IBM Corporation",
 				companyURI : "http://ibm.com/",
-				note : "Previous Editor"
+				note : "Previous Editor",
+				w3cid: 2460
 			}, ],
 
 			// Authors, add as many as you like.
