--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1492,11 +1492,39 @@
         <p><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_TooltipDialog.html" title="TooltipDialog Widget Tests" target="_blank">Dojo nightly</a></p></td>
       </section>
     </section>
+    
+        <section class="widget" id="grid">
+            <h3>Grids : Interactive Tabular Data and Layout Containers</h3>
 
+            <section class="notoc">
+                <h4>Example</h4>
+                <p class="note">Any examples referenced here that are hosted outside www.w3.org
+                    may have changed and may not accurately exemplify the guidance in this section.
+                    The APG task force is developing examples for APG version 1.1 that will be
+                    directly incorporated into the guide.</p>
+                <ul>
+                    <li><a
+                        href="http://www.oaa-accessibility.org/examplep/grid1/"
+                        title="Grid Example: Reimbursement Form"
+                        target="_blank"
+                        rel="nofollow">Travel form (Open Ajax Alliance)</a></li>
+                    <li><a
+                        href="http://www.oaa-accessibility.org/examplep/grid2/"
+                        title="Grid: Email Application"
+                        target="_blank"
+                        rel="nofollow">Email client (Open Ajax Alliance)</a></li>
+                    <li><a
+                        href="http://www.oaa-accessibility.org/examplep/grid2/"
+                        title="Grid: Email Application"
+                        target="_blank"
+                        rel="nofollow">Grid Email Application sortable by column headers</a></li>
+                </ul>
+            </section>
+        </section>
 
-    <section class="widget" id="landmarks">
-      <h3 > Landmark Navigation </h3>
-      <p class="note">This section has not been updated since it was integrated from APG version 1.0 -- an APG task force review is pending.</p>
+        <section class="widget" id="landmarks">
+            <h3>Landmark Navigation</h3>
+            <p class="note">This section has not been updated since it was integrated from APG version 1.0 -- an APG task force review is pending.</p>
 
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
